<resources>
    <string name="app_name">DEInspection</string>
    <string name="brand_of_the_car">brand of the car</string>
    <string name="deinspection">DEInspection</string>
    <string name="settings">settings</string>
    <string name="set_allarms_for">Set allarms for</string>
    <string name="checkbox">CheckBox</string>
    <string name="next">next</string>
    <string name="DEInspection">DEInspection</string>
    <string name="car1">car1</string>
    <string name="car2">car2</string>
    <string name="car3">car3</string>
    <string name="add_new_car">Add new car</string>
    <string name="mudan_a_do_leo">Mudança do óleo</string>
    <string name="pr_xima_inspe_o">Próxima inspeção</string>
    <string name="renova_o_do_selo">Renovação do selo</string>
    <string name="press_o_dos_pneus">Pressão dos pneus</string>
    <string name="mudan_a_dos_pneus">Mudança dos pneus</string>
    <string name="mudan_a_dos_filtos_de_ar">Mudança dos filtos de ar</string>
    <string name="mudan_a_do_liquido_limpeza_de_vidros">Mudança do liquido limpeza de vidros</string>
    <string name="selecione_os_lembretes_que_deseja">Selecione os lembretes que deseja</string>
    <string name="inserir_lembrete_personalizado">Inserir lembrete personalizado</string>
    <string name="defina_os_seus_alarmes">Defina os seus alarmes</string>
    <string name="fim">Fim</string>
    <string name="pr_ximo">Próximo</string>
    <string name="mudan_a_dos_filtros_de_ar">Mudança dos filtros de ar</string>
    <string name="lembrete_personalizado">Lembrete personalizado</string>
    <string name="ajuda">ajuda</string>
    <string name="todo">todo</string>
    <string name="attr1">attr1</string>
    <string name="info">info</string>
    <string name="atualizar">atualizar</string>
    <string name="mais_sobre_inspecao">mais sobre inspecao</string>
    <string name="proximainspecao">próxima inspeção a dd.mm.yyyy</string>
    <string name="voltar">Voltar</string>
    <string name="edit_time_for_alarm">edit time for alarm</string>
    <string name="_9_30">9:30</string>
    <string name="mais_sobre_deinspection">Mais sobre DEInspection</string>
    <string name="instagram">Instagram</string>
    <string name="facebook">Facebook</string>
    <string name="feedback_deixe_nos_a_sua_opiniao">Feedback- deixe-nos a sua opiniao!</string>
    <string name="reportar_erro">Reportar erro</string>
    <string name="edit_car_button">edit car button</string>
    <string name="car_brand_model_matricula">Car brand model matricula</string>
    <string name="insira_as_informa_es_sobre_o_seu_carro">Insira as informações sobre o seu carro</string>
    <string name="pr_ximo">Próximo</string>
    <string name="modelo">Modelo:</string>
    <string name="matricula">Matricula:</string>
    <string name="data">Data:</string>
    <string name="marca">Marca:</string>
    <string name="modelo_do_carro">modelo do carro</string>
    <string name="matricula_aa00aa">matricula AA00AA</string>
    <string name="ano">ano</string>
    <string name="marca_do_carro">marca do carro</string>
    <string name="mes">mes</string>
    <string name="back">Back</string>

</resources>