<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/DEInspection"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/DEInspection"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnCar1"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:fontFamily="@font/comfortaa"
        android:onClick="seeCar"
        android:text="@string/car1"
        android:textColor="#000000"
        android:textColorHighlight="#00FFFFFF"
        android:textColorLink="#00FFFFFF"
        android:textSize="36sp"
        app:backgroundTint="#00FFFFFF"
        app:iconTint="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btnCar2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DEInspection"
        app:layout_constraintVertical_bias="1.0"
        app:rippleColor="#00FFFFFF" />

    <Button
        android:id="@+id/btnCar2"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:fontFamily="@font/comfortaa"
        android:onClick="seeCar"
        android:text="@string/car2"
        android:textColor="#000000"
        android:textColorHighlight="#00FFFFFF"
        android:textColorLink="#00FFFFFF"
        android:textSize="36sp"
        app:backgroundTint="#00FFFFFF"
        app:iconTint="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btnCar3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DEInspection"
        app:layout_constraintVertical_bias="1.0"
        app:rippleColor="#00FFFFFF" />

    <Button
        android:id="@+id/btnCar3"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="424dp"
        android:fontFamily="@font/comfortaa"
        android:onClick="seeCar"
        android:text="@string/car3"
        android:textColor="#000000"
        android:textColorHighlight="#00FFFFFF"
        android:textColorLink="#00FFFFFF"
        android:textSize="36sp"
        app:backgroundTint="#00FFFFFF"
        app:iconTint="#00FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DEInspection"
        app:rippleColor="#00FFFFFF" />

    <Button
        android:id="@+id/btnNext2"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginBottom="60dp"
        android:fontFamily="@font/comfortaa"
        android:onClick="addNewCar"
        android:text="@string/add_new_car"
        android:textColor="#000000"
        android:textColorHighlight="#00FFFFFF"
        android:textColorLink="#00FFFFFF"
        android:textSize="36sp"
        android:visibility="visible"
        app:backgroundTint="#00FFFFFF"
        app:iconTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCar3"
        app:layout_constraintVertical_bias="1.0"
        app:rippleColor="#00FFFFFF"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>