<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".NewCarActivity">


    <TextView
        android:id="@+id/settings"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/settings"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/DEInspection"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/deinspection"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNext2"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginBottom="52dp"
        android:fontFamily="@font/comfortaa"
        android:onClick="next2Button"
        android:text="@string/next"
        android:textColor="#000000"
        android:textColorHighlight="#00FFFFFF"
        android:textColorLink="#00FFFFFF"
        android:textSize="36sp"
        android:visibility="visible"
        app:backgroundTint="#00FFFFFF"
        app:iconTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#00FFFFFF"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/set_allarms_for"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />

    <ScrollView
        android:layout_width="304dp"
        android:layout_height="258dp"
        android:layout_marginTop="200dp"
        app:layout_constraintBottom_toTopOf="@+id/btnNext2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/oil"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/oleo" />

            <CheckBox
                android:id="@+id/inspection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inspeção" />

            <CheckBox
                android:id="@+id/stamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox" />

            <CheckBox
                android:id="@+id/tirePressure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox" />

            <CheckBox
                android:id="@+id/tires"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox" />

            <CheckBox
                android:id="@+id/airFilters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox" />

            <CheckBox
                android:id="@+id/windowCleaner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox" />

            <EditText
                android:id="@+id/custom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Insert Custom Reminder" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>