<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.SettingsActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="333dp"
        android:layout_height="508dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.706">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/pickTimeBtn"
                android:layout_width="193dp"
                android:layout_height="match_parent"
                android:text="@string/edit_time_for_alarm"
                android:textColor="#000000"
                app:backgroundTint="@color/background"
                app:iconTint="#000000" />

            <TextView
                android:id="@+id/timeTv"
                android:layout_width="142dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/_9_30"
                android:textSize="18sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btnInstagram"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:drawableLeft="@drawable/ic_instagram"
            android:text="Instagram"
            android:textColor="#000000"
            app:backgroundTint="@color/background"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2" />

        <Button
            android:id="@+id/btnFacebook"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:drawableLeft="@drawable/ic_facebook"
            android:text="Facebook"
            android:textColor="#000000"
            app:backgroundTint="@color/background"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2" />

        <Button
            android:id="@+id/btnFeedback"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/feedback_deixe_nos_a_sua_opiniao"
            android:textColor="#000000"
            app:backgroundTint="@color/background"
            app:iconTint="#000000" />

        <Button
            android:id="@+id/btnMoreAbout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="Aviso Legal"
            android:textColor="#000000"
            app:backgroundTint="@color/background"
            app:iconTint="#000000" />

        <Button
            android:id="@+id/btnError"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/reportar_erro"
            android:textColor="#000000"
            app:backgroundTint="@color/background"
            app:iconTint="#000000" />

        <Button
            android:id="@+id/btnReset"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="Eliminar tudo!"
            android:textColor="#000000"
            app:backgroundTint="@color/background"
            app:iconTint="#000000" />

    </LinearLayout>

    <Button
        android:id="@+id/btnBack"
        android:layout_width="145dp"
        android:layout_height="67dp"
        android:drawableLeft="@drawable/ic_arrowback"
        android:text="Back"
        android:textColor="#000000"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.67" />

</androidx.constraintlayout.widget.ConstraintLayout>