<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".activities.MainMenuActivity">


    <ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="280dp"
        android:layout_height="380dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.78">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnCar1"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:fontFamily="@font/comfortaa"
                android:gravity="center"
                android:text="@string/car1"
                android:textColor="#000000"
                android:textColorHighlight="#00FFFFFF"
                android:textColorLink="#00FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#00FFFFFF"
                app:iconTint="#00FFFFFF"
                app:layout_constraintBottom_toTopOf="@+id/btnCar2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/DEInspection"
                app:layout_constraintVertical_bias="0.524"
                app:rippleColor="#00FFFFFF"
                tools:gravity="center" />

            <Button
                android:id="@+id/btnCar2"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/car2"
                android:textColor="#000000"
                android:textColorHighlight="#00FFFFFF"
                android:textColorLink="#00FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#00FFFFFF"
                app:iconTint="#00FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/DEInspection"
                app:rippleColor="#00FFFFFF" />


            <Button
                android:id="@+id/btnCar3"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/car2"
                android:textColor="#000000"
                android:textColorHighlight="#00FFFFFF"
                android:textColorLink="#00FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#00FFFFFF"
                app:iconTint="#00FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/DEInspection"
                app:rippleColor="#00FFFFFF" />

            <Button
                android:id="@+id/btnCar4"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/car2"
                android:textColor="#000000"
                android:textColorHighlight="#00FFFFFF"
                android:textColorLink="#00FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#00FFFFFF"
                app:iconTint="#00FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/DEInspection"
                app:rippleColor="#00FFFFFF" />

            <Button
                android:id="@+id/btnCar5"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/comfortaa"

                android:text="@string/car2"
                android:textColor="#000000"
                android:textColorHighlight="#00FFFFFF"
                android:textColorLink="#00FFFFFF"
                android:textSize="24sp"
                app:backgroundTint="#00FFFFFF"
                app:iconTint="#00FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/DEInspection"
                app:rippleColor="#00FFFFFF" />


            <Button
                android:id="@+id/btnAddCar"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginBottom="60dp"
                android:fontFamily="@font/comfortaa"
                android:text="@string/add_new_car"
                android:textColor="#000000"
                android:textColorHighlight="#00FFFFFF"
                android:textColorLink="#00FFFFFF"
                android:textSize="24sp"
                android:visibility="visible"
                app:backgroundTint="#00FFFFFF"
                app:iconTint="#00FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:rippleColor="#00FFFFFF"
                tools:visibility="visible" />


        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/DEInspection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_bold"
        android:gravity="center"
        android:text="@string/DEInspection"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/scrollView4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.858"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btnSettings"
        android:layout_width="110dp"
        android:layout_height="93dp"

        android:drawableBottom="@drawable/ic_porca"
        android:fontFamily="@font/comfortaa_bold"
        android:text="Definições"
        android:textColor="#000000"
        android:textSize="10sp"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/DEInspection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.78"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.774" />


</androidx.constraintlayout.widget.ConstraintLayout>