<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".NewCar2Activity">


    <TextView
        android:id="@+id/settings"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/settings"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/DEInspection"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/deinspection"
        android:textColor="#000000"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNext2"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginBottom="52dp"
        android:fontFamily="@font/comfortaa"
        android:onClick="finishButton"
        android:text="finish"
        android:textColor="#000000"
        android:textColorHighlight="#00FFFFFF"
        android:textColorLink="#00FFFFFF"
        android:textSize="36sp"
        android:visibility="visible"
        app:backgroundTint="#00FFFFFF"
        app:iconTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:rippleColor="#00FFFFFF"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/set_allarms_for"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="319dp"
        android:layout_height="246dp"
        android:layout_marginBottom="64dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/btnNext2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">


            <TextView
                android:id="@+id/attribute1"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/comfortaa"
                android:gravity="center"
                android:text="att1: remind value"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/seekBar"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/attribute2"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/comfortaa"
                android:gravity="center"
                android:text="att1: remind value"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/seekBar2"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/attribute3"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/comfortaa"
                android:gravity="center"
                android:text="att1: remind value"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/seekBar3"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/attribute4"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/comfortaa"
                android:gravity="center"
                android:text="att1: remind value"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/seekBar4"
                android:layout_width="match_parent"
                android:layout_height="50dp" />

            <TextView
                android:id="@+id/attribute5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/comfortaa"
                android:gravity="center"
                android:text="att1: remind value"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/seekBar5"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:isScrollContainer="false" />

            <TextView
                android:id="@+id/attribute6"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="@font/comfortaa"
                android:gravity="center"
                android:text="att1: remind value"
                android:textSize="18sp" />

            <SeekBar
                android:id="@+id/seekBar6"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:isScrollContainer="false" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>